Possible fix for front page headshot

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/me.JPG" style="width:100%;" class="w3-round"><br><br>
+    <img src="./images/me.jpg" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Sean Grate</b></h4>
     <p class="w3-text-grey">Ph.D. Candidate</p>
   </div>
@@ -56,7 +56,7 @@
 
   <!-- Header -->
   <header>
-    <a href="#"><img src="./images/me.JPG" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+    <a href="#"><img src="./images/me.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
   </header>
 
