Updates to outreach and service

--- a/outreach/index.html
+++ b/outreach/index.html
@@ -44,9 +44,36 @@
     </div>
   </header>
 
-  <div id="main_body" class="w3-container w3-padding-large" style="margin-bottom:32px">
-    In progress.
-  </div>
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+    <p>
+      <ul>
+        <li>
+          Destination STEM
+          <span style="float:right">October 2022, October 2023</span>
+        </li>
+        <br>
+        <li>
+          Auburn Mathematical Puzzle Challenge (AMP'd)
+          <span style="float:right">November 2022</span>
+        </li>
+        <br>
+        <li>
+          University of Kentucky Math Club
+          <span style="float:right">2016-2020</span>
+        </li>
+        <br>
+        <li>
+          Expanding Your Horizons workshop mentor
+          <span style="float:right">2019</span>
+        </li>
+        <br>
+        <li>
+          Julia Robinson Mathematics Festival
+          <span style="float:right">2019</span>
+        </li>
+      </ul>
+    </p>
+    </div>
   
 <!-- End page content -->
 </div>
