--- a/service/index.html
+++ b/service/index.html
@@ -44,8 +44,26 @@
     </div>
   </header>
 
-  <div id="main_body" class="w3-container w3-padding-large" style="margin-bottom:32px">
-    In progress.
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+    <p>
+      <ul>
+        <li>
+          President of the Mathematics Club at Auburn University
+          <span style="float:right">2021-2024</span>
+        </li>
+        <br>
+        <li>
+          Secretary for the Auburn University DMS Graduate Student Council
+          <span style="float:right">2022-2023</span>
+        </li>
+        <br>
+        <li>
+          Graduate Student Representative on the Auburn University DMS Graduate Student Council
+          <span style="float:right">2021-2023</span>
+        </li>
+        <br>
+      </ul>
+    </p>
   </div>
   
 <!-- End page content -->
