Expanded Lefschetz page

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <div class="w3-container w3-white">
-        <a class="weblink" href="./lefschetz.html"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
+        <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Lefschetz Properties</b></p>
         <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
       </div>
