--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <h4 id="research"><b>Graduate Research</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
       <div class="w3-container w3-white">
-        <a class="weblink" href="./regularity.html"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
+        <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Castelnuovo-Mumford Regularity</b></p>
         <p>How complicated can generators and relations of a module be?</p>
       </div>
@@ -230,7 +230,7 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tda.html"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="./tda/"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Topological Data Analysis</b></p>
         <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
@@ -260,7 +260,7 @@
       <a class="weblink" href="https://github.com/TheGrateSalmon/M2/tree/permutations" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
-        <p>A Macaulay2 package implementing support for permutations (in progress).</p>
+        <p>A Macaulay2 package implementing permutations (in progress).</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
