--- a/service/index.html
+++ b/service/index.html
@@ -24,7 +24,7 @@
     </a>
     <!-- <img src="../images/tda/tda_talk.jpg" style="width:100%;" class="w3-round"><br><br> -->
     <h4><b>Service</b></h4>
-    <p class="w3-text-grey">Responsibilities I have taken.</p>
+    <p class="w3-text-grey">Responsibilities I have undertaken.</p>
   </div>
   <div class="w3-bar-block">
     <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
@@ -48,20 +48,77 @@
     <p>
       <ul>
         <li>
+          Department Tea (Auburn University)
+          <span style="float:right">2021, 2023-present</span>
+          <ul>
+            <li>
+              Reorganized the department tea, a weekly gathering for graduate students, faculty, and staff to casually talk over tea, coffee, and snacks.
+            </li>
+            <li>
+              With the help of Joanie Morris, took over the responsibilities starting in 2023 by sending weekly reminders, buying supplies, tracking expenses, and setting up the venue.
+            </li>
+          </ul>    
+        </li>
+        <br>
+        <li>
           President of the Mathematics Club at Auburn University
           <span style="float:right">2021-2024</span>
+          <ul>
+            <li>
+              Rewrote constitution and bylaws to reinstate club as a recognized entity by Auburn University.
+            </li>
+            <li>
+              Recruited leadership and members for the club, and sent out emails to members about club meetings, outreach opportunities, and other relevant events.
+            </li>
+            <li>
+              Secured funding for club meetings.
+            </li>
+            <li>
+              Coordinated internal and external speakers from academia and industry to speak at club meetings.
+            </li>
+            <li>
+              Organized seminars, socials, and board game nights for the club.
+            </li>
+          </ul>
         </li>
         <br>
         <li>
           Secretary for the Auburn University DMS Graduate Student Council
           <span style="float:right">2022-2023</span>
+          <ul>
+            <li>
+              Maintained minutes for town halls.
+            </li>
+            <li>
+              Communicated with graduate students on the happenings of town halls.
+            </li>
+          </ul>
         </li>
         <br>
         <li>
           Graduate Student Representative on the Auburn University DMS Graduate Student Council
           <span style="float:right">2021-2023</span>
+          <ul>
+            <li>
+              Acted as a voice for my cohort at town halls and with the department in any issues or suggestions they raised.
+            </li>
+            <li>
+              Offered support and sought answers for questions fellow graduate students asked me.
+            </li>
+            <li>
+              Constructed cubicles for my cohort to ensure they had offices for the following semester.
+            </li>
+            <li>
+              Helped organize and set up department tailgates for football games.
+            </li>
+            <li>
+              Advocated for transparency in GTA assignments, including developing and implenting a potential, mathematically-based algorithm for doing so.
+            </li>
+            <li>
+              With the help of <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a>, revamped the graduate student seminar to incentive first-year graduate students to attend a broad range of department seminars while simultaneously not overloading their schedules.
+            </li>
+          </ul>
         </li>
-        <br>
       </ul>
     </p>
   </div>
