--- a/outreach/index.html
+++ b/outreach/index.html
@@ -50,11 +50,30 @@
         <li>
           Destination STEM
           <span style="float:right">October 2022, October 2023</span>
+          <ul>
+            <li>
+              An annual event hosted at Auburn University for younger students to explore STEM by completeing a "passport" of the sciences, collecting stamps as they go to each STEM field and participate at each exhibit.
+            </li>
+            <li>
+              Helped run a table on cryptography where students encrypted their own message and decrypted a message left by a previous visitor.
+            </li>
+            <li>
+              Ran a table on polyhedral subdivisions where students tried to reconstruct a shape from 3D-printed pieces that I designed.
+            </li>
+          </ul>
         </li>
         <br>
         <li>
           Auburn Mathematical Puzzle Challenge (AMP'd)
           <span style="float:right">November 2022</span>
+          <ul>
+            <li>
+              An annual competition hosted at Auburn University where students from around the Lee County area of Alabama to challenging mathematical puzzles.
+            </li>
+            <li>
+              Ran a table the "Black Market Barter" event and helped supervise another one of the competitive challenges.
+            </li>
+          </ul>
         </li>
         <br>
         <li>
@@ -65,11 +84,27 @@
         <li>
           Expanding Your Horizons workshop mentor
           <span style="float:right">2019</span>
+          <ul>
+            <li>
+              An annual outreach event for middle school children to explore STEM through interactive exhibits and demonstrations.
+            </li>
+            <li>
+              Helped organize and run a workshop on building bottle rockets and explaining the science behind the mechanics.
+            </li>
+          </ul>
         </li>
         <br>
         <li>
           Julia Robinson Mathematics Festival
           <span style="float:right">2019</span>
+          <ul>
+            <li>
+              An annual math-focused festival where younger kids can explore higher level math through puzzles, interactive activities, and discussions.
+            </li>
+            <li>
+              Helped run a table on magic tricks with cards.
+            </li>
+          </ul>
         </li>
       </ul>
     </p>
