--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- About -->
   <div class="w3-container w3-padding-large w3-row-padding">
-    <h4 id="about"><b>About</b></h4>
+    <h2 id="about"><b>About</b></h2>
     <p>
       I am a fifth-year Ph.D. candidate in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
@@ -80,17 +80,52 @@
 
   <!-- Publications -->
   <div class="w3-container w3-padding-large w3-row-padding">
-    <h4 id="papers"><b>Papers</b></h4>
+    <h2 id="papers"><b>Papers</b></h2>
     <div class="w3-container">
-    <p>Publications</p>
+    <h4><b>Publications</b></h4>
     <ol reversed>
+      <!-- Connected sums -->
+      <li>
+        <div>
+          <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2401.10492" target="_blank">Betti numbers for connected sums of graded Gorenstein artinian algebras</a></span>
+          <span style="float:right; width:30%"><em>Transactions of the AMS, to appear.</em></span>
+        </div>
+        <br>
+        <span style="display:inline-block; width:50%"><em>
+          Joint with <a class="weblink" href="https://sites.google.com/view/nasrinaltafi" target="_blank">Nasrin Altafi</a>,
+          <a class="weblink" href="https://www.docenti.unina.it/roberta.digennaro" target="_blank">Roberta Di Gennaro</a>,
+          <a class="weblink" href="https://math.galetto.org/" target="_blank">Federico Galetto</a>,
+          <a class="weblink" href="https://webgrec.ub.edu/webpages/000006/ang/miro.ub.edu.html" target="_blank">Rosa M. Miró-Roig</a>,
+          <a class="weblink" href="https://www.ms.uky.edu/~uwenagel/" target="_blank">Uwe Nagel</a>,
+          <a class="weblink" href="https://www.math.unl.edu/~aseceleanu2/" target="_blank">Alexandra Seceleanu</a>,
+          and Junzo Watanabe
+        </em></span>
+        <br>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/connected_sums.pdf">PDF</a> | 
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          The connected sum construction, which takes as input Gorenstein rings and produces new Gorenstein rings, can be considered as an algebraic analogue for the topological construction having the same name. 
+          We determine the graded Betti numbers for connected sums of graded Artinian Gorenstein algebras. 
+          Along the way, we find the graded Betti numbers for fiber products of graded rings; an analogous result was obtained in the local case by Geller. 
+          We relate the connected sum construction to the doubling construction, which also produces Gorenstein rings. 
+          Specifically, we show that a connected sum of doublings is the doubling of a fiber product ring. 
+        </blockquote>
+        <br>
+        <br>
+      </li>
       <!-- WLP -->
       <li>
         <div>
-          <a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a> 
-          (with <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>). 
-          In: Springer INdAM series: The strong and weak Lefschetz properties (2023), to appear.
+          <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></span>
+          <span style="float:right; width:30%"><em>Lefschetz properties: Current and New Directions, Spring INdAM series, to appear</em></span>
         </div>
+        <br>
+        <span style="display:inline-block; width:50%"><em>
+          Joint with <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>
+        </em></span>
+        <br>
         <br>
         <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/betti_wlp.pdf">PDF</a> | 
         <i class="fa fa-video-camera"></i> <a class="weblink" href="https://youtu.be/wRT48OpfviU?si=s9P3anVzmZ4bqPKl" target="_blank">Video</a> | 
@@ -105,16 +140,18 @@
         <br>
         <br>
       </li>
-      <!-- Lidar -->
+      <!-- LIDAR -->
       <li>
         <div>
-          <a class="weblink" href="https://ieeexplore.ieee.org/document/9323522" target="_blank">Surface modeling for airborne lidar</a> 
-          (with <a class="weblink" href="https://hblanton.github.io/" target="_blank">Hunter Blanton</a> 
-          and <a class="weblink" href="https://jacobsn.github.io/" target="_blank">Nathan Jacobs</a>). 
-          In: IGARSS 2020-2020 IEEE International Geoscience and Remote Sensing Symposium.
-          2020, pp. 1110–1113.
-          DOI: 10.1109/IGARSS39084.2020.9323522.
+          <span style="display:inline-block; width:50%"><a class="weblink" href="https://ieeexplore.ieee.org/document/9323522" target="_blank">Surface modeling for airborne lidar</a></span>
+          <span style="float:right; width:30%"><em>IEEE International Geoscience and Remote Sensing Symposium, 2020</em></span>
         </div>
+        <br>
+        <span style="display:inline-block; width:50%"><em>
+          Joint with <a class="weblink" href="https://hblanton.github.io/" target="_blank">Hunter Blanton</a> 
+          and <a class="weblink" href="https://jacobsn.github.io/" target="_blank">Nathan Jacobs</a>
+        </em></span>
+        <br>
         <br>
         <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/surface_modeling.pdf">PDF</a> | 
         Abstract 
@@ -131,16 +168,20 @@
         <br>
       </li>
     </ol>
-    <p>Preprints</p>
+    <h4><b>Preprints</b></h4>
     <ol>
         <!-- Education -->
         <li>
           <div>
-            Graph Theoretic Reflection to Foster Alignment in Coordinated Course 
-            (with <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a> 
-            and <a class="weblink" href="https://www.auburn.edu/cosam/faculty/math_stats/lanius/index.htm" target="_blank">Melinda Lanius</a>).
-            Submitted.
+            <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Course</span>
+            <span style="float:right; width:30%"><em>Submitted</em></span>
           </div>
+          <br>
+          <span style="display:inline-block; width:50%"><em>
+            Joint with <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a> 
+            and <a class="weblink" href="https://www.auburn.edu/cosam/faculty/math_stats/lanius/index.htm" target="_blank">Melinda Lanius</a>
+          </em></span>
+          <br>
           <br>
           <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/CAAT.pdf">PDF</a> | 
           Abstract 
@@ -155,45 +196,22 @@
           <br>
           <br>
         </li>
-        <!-- Connected sums -->
-        <li>
-          <div>
-            <a class="weblink" href="https://arxiv.org/abs/2401.10492" target="_blank">Betti numbers for connected sums of graded Gorenstein artinian algebras</a>
-            (with <a class="weblink" href="https://sites.google.com/view/nasrinaltafi" target="_blank">Nasrin Altafi</a>,
-            <a class="weblink" href="https://www.docenti.unina.it/roberta.digennaro" target="_blank">Roberta Di Gennaro</a>,
-            <a class="weblink" href="https://math.galetto.org/" target="_blank">Federico Galetto</a>,
-            <a class="weblink" href="https://webgrec.ub.edu/webpages/000006/ang/miro.ub.edu.html" target="_blank">Rosa M. Miró-Roig</a>,
-            <a class="weblink" href="https://www.ms.uky.edu/~uwenagel/" target="_blank">Uwe Nagel</a>,
-            <a class="weblink" href="https://www.math.unl.edu/~aseceleanu2/" target="_blank">Alexandra Seceleanu</a>,
-            and Junzo Watanabe).
-            Submitted.
-          </div>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/connected_sums.pdf">PDF</a> | 
-          Abstract 
-          <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
-          <blockquote class="abstract-content">
-            The connected sum construction, which takes as input Gorenstein rings and produces new Gorenstein rings, can be considered as an algebraic analogue for the topological construction having the same name. 
-            We determine the graded Betti numbers for connected sums of graded Artinian Gorenstein algebras. 
-            Along the way, we find the graded Betti numbers for fiber products of graded rings; an analogous result was obtained in the local case by Geller. 
-            We relate the connected sum construction to the doubling construction, which also produces Gorenstein rings. 
-            Specifically, we show that a connected sum of doublings is the doubling of a fiber product ring. 
-          </blockquote>
-          <br>
-          <br>
-        </li>
         <!-- MatrixSchubert -->
         <li>
           <div>
-            <a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a>
-            (with <a class="weblink" href="https://sites.google.com/view/ayah-almousa/" target="_blank">Ayah Almousa</a>, 
+            <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a></span>
+            <span style="float:right; width:30%"><em>Submitted</em></span>
+          </div>
+          <br>
+          <span style="display:inline-block; width:50%"><em>
+            Joint with <a class="weblink" href="https://sites.google.com/view/ayah-almousa/" target="_blank">Ayah Almousa</a>, 
             <a class="weblink" href="https://www.daojihuang.me/" target="_blank">Daoji Huang</a>,
             <a class="weblink" href="https://patriciajklein.github.io/" target="_blank">Patricia Klein</a>,
             <a class="weblink" href="https://sites.google.com/view/adamlaclair/home" target="_blank">Adam LaClair</a>,
             <a class="weblink" href="https://www.mit.edu/~lyuyuan/" target="_blank">Yuyuan Luo</a>,
-            and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>).
-            Submitted.
-          </div>
+            and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>
+          </em></span>
+          <br>
           <br>
           <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | 
           <i class="fa fa-keyboard-o"></i> <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html">Code</a> | 
@@ -212,9 +230,9 @@
     <hr>
   </div>
 
-  <!-- Graduate Research -->
+  <!-- Research -->
   <div class="w3-container w3-row-padding">
-    <h4 id="research"><b>Graduate Research</b></h4>
+    <h2 id="research"><b>Research</b></h2>
     <div class="w3-third w3-container w3-margin-bottom">
       <div class="w3-container w3-white">
         <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
@@ -241,7 +259,7 @@
   <!-- Software -->
   <br>
   <div class="w3-container w3-row-padding">
-    <h4 id="software"><b>Software</b></h4>
+    <h2 id="software"><b>Software</b></h2>
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
