Corrected typos and small details

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       and the <a class="weblink" href="http://mvrl.cs.uky.edu/" target="_blank">Multimodal Vision Research Laboratory</a>.
     </p>
     <p>
-      My primary research interests lie in commutative algebra, algebraic geometry, and data analysis.
+      My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
       However, I've been finding that a lot of side projects that interest me come from combinatorial optimization.
       I will be on the job market this fall.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
@@ -119,7 +119,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></span>
-          <span style="float:right; width:30%"><em>Lefschetz properties: Current and New Directions, Spring INdAM series, to appear</em></span>
+          <span style="float:right; width:30%"><em>Lefschetz Properties: Current and New Directions, Springer INdAM series, to appear</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -237,7 +237,7 @@
       <div class="w3-container w3-white">
         <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Castelnuovo-Mumford Regularity</b></p>
-        <p>How complicated can generators and relations of a module be?</p>
+        <p>How complicated can the generators and relations of a module be?</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
