Added emphasis to definition

--- a/regularity/index.html
+++ b/regularity/index.html
@@ -59,7 +59,7 @@
           </li>
           <li>
             <b>Definition.</b> Suppose \( F_\bullet \) is a graded free resolution of \( M \).
-            The Betti table (or Betti diagram) of \( M \) is a diagram where the entry \( b_{i,j} \) in column \( i \) and row \( j \) is the rank of the free module \( F_i \) in the \( j \)-th degree,
+            The <em>Betti table</em> (or <em>Betti diagram</em>) of \( M \) is a diagram where the entry \( b_{i,j} \) in column \( i \) and row \( j \) is the rank of the free module \( F_i \) in the \( j \)-th degree,
             i.e., \( b_{i,j} \) indicates that \( F_i \) has a summand of the form \( R(-i-j)^{b_{i,j}} \).
           </li>
           <li>
