--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -50,9 +50,9 @@
     </div>
   </header>
 
-  <!-- Invited Talks -->
-  <div id="invited" class="w3-container w3-padding-large" style="margin-bottom:32px">
-  <h2><b>Invited Talks</b></h2>
+  <!-- Conference Talks -->
+  <div id="conference" class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <h2><b>Conference Talks</b></h2>
   <p>
     <ul>
       <li>
@@ -65,16 +65,9 @@
           In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
           We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.
         </blockquote>
+        <br>
       </li>
-    </ul>
-  </p>
-  </div>
-  <hr>
-  <!-- Contributed Talks -->
-  <div id="contributed" class="w3-container w3-padding-large" style="margin-bottom:32px">
-  <h2><b>Contributed Talks</b></h2>
-  <p>
-    <ul>
+      <br>
       <li>
         <q>Betti tables forcing failure of the Weak Lefschetz Property</q>, Combinatorial Algebra meets Algebraic Combinatorics (CAAC)
         <span style="float:right">January 2024</span>
